partial backend implementation

--- a/front_end/login.html
+++ b/front_end/login.html
@@ -28,7 +28,7 @@
     <img class="wave" src="wavedup2.png">
 	<div class="container">
 		<div class="img">
-			<img src="imgdup.svg" style="height:700px;width: 700px;">  
+			<img src="bgimgdup.svg" style="height:700px;width: 700px;">  
 		</div>
 		<div class="login-content" id="det">
 			<div class="form">
@@ -48,7 +48,7 @@
            		   </div>
            		   <div class="div">
            		   		<h5>Username</h5>
-           		   		<input type="text" id="username" class="input">
+           		   		<input type="text" id="vusername" class="input">
            		   </div>
            		</div>
            		<div class="input-div pass">
@@ -57,7 +57,7 @@
            		   </div>
            		   <div class="div">
            		    	<h5>Password</h5>
-           		    	<input type="password" id="password" class="input">
+           		    	<input type="password" id="vpassword" class="input">
             	   </div>
             	</div>
             	<a href="#">Forgot Password?</a>
@@ -73,7 +73,7 @@
                           </div>
                           <div class="div">
                                   <h5>Username</h5>
-                                  <input type="text" id="username" class="input">
+                                  <input type="text" id="ousername" class="input">
                           </div>
                        </div>
                        <div class="input-div pass">
@@ -82,7 +82,7 @@
                           </div>
                           <div class="div">
                                <h5>Password</h5>
-                               <input type="password" id="password" class="input">
+                               <input type="password" id="opassword" class="input">
                        </div>
                     </div>
                     <a href="#">Forgot Password?</a>
@@ -133,7 +133,7 @@
 
 </div>
 
-<script>
+<!-- <script>
     var x=document.getElementById("voter");
     var y=document.getElementById("organiser");
     var z=document.getElementById("btn");
@@ -148,6 +148,6 @@
     z.style.left="45%";
    }
 
-</script>
+</script> -->
 </body>
 </html>
