Organizer registration implemented

--- a/front_end/reg.html
+++ b/front_end/reg.html
@@ -72,7 +72,7 @@
                  </div>
               </div>
             	<a href="#">Forgot Password?</a>
-            	<button id="cap" class="btn" onclick="onCap()">create account</button>
+            	<button id="cap" class="btn" onclick="verifyUsername()">create account</button>
                 </div>
                 </div>
                 <div id="organiser">
@@ -106,7 +106,7 @@
                      </div>
                   </div>
                     <a href="#">Forgot Password?</a>
-                    <button id="cap" class="btn" onclick="onCap()">create account</button>
+                    <button id="cap" class="btn" onclick="verifyUsername()">create account</button>
                    
 				</div>
                 </div>
