--- a/front_end/reg.html
+++ b/front_end/reg.html
@@ -101,7 +101,7 @@
                              <i class="fas fa-lock"></i>
                         </div>
                         <div class="div">
-                             <h5>Password</h5>
+                             <h5>confirm Password</h5>
                              <input type="password" id="ocpassword" class="input" required>
                      </div>
                   </div>
