--- a/front_end/login.html
+++ b/front_end/login.html
@@ -61,7 +61,7 @@
             	   </div>
             	</div>
             	<a href="#">Forgot Password?</a>
-            	<button id="cap" class="btn" onclick="onCap()">capture</button>
+            	<button id="cap" class="btn" onclick="verifyLogin()">capture</button>
                 </div>
                 </div>
                 <div id="organiser">
@@ -86,7 +86,7 @@
                        </div>
                     </div>
                     <a href="#">Forgot Password?</a>
-                    <button id="cap" class="btn" onclick="onCap()">capture</button>
+                    <button id="cap" class="btn" onclick="verifyLogin()">capture</button>
                    
 				</div>
                 </div>
@@ -116,7 +116,7 @@
                     <canvas id="canvas" ></canvas>
                     <div class="buttons">
                         <!-- this button is for taking the photo again -->
-                    <input type="button" class="btn" value="retake" onclick="onCap()" required>
+                    <input type="button" class="btn" value="retake" onclick="verifyLogin()" required>
                     <!-- this button is for sending the taken photo for validation  -->
                  <input type="button"class="btn" value="confirm" onclick="validatePhoto()" required>
                     <!-- test button for storing in database -->
